k8s/https/ingress-nginx-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
